[package]
name = "user-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bpf-api = "0.1"
bpf-script = "0.1"
btf = "0.3"
btf-derive = "0.3"
clap = { version = "4.0.18", features = ["derive"] }
elf = "0.4.0"
